--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,12 @@
     <link rel="stylesheet" src="main.css">
 </head>
 <body>
-    
+    <div class="container">
+        <div class="calculator">
+            <div class="calculator-display"></div>
+            <div class="calculator-digits"></div>
+        </div>
+        </div>
+    </div>
 </body>
 </html>
