Refactor calculator buttons layout: changed 'calculator-digits' div to 'button-container' for consistency

--- a/index.html
+++ b/index.html
@@ -14,80 +14,80 @@
                 <p>Hello World</p>
             </div>
             <div class="calculator-digits-container">
-                    <div class="calculator-digits">
+                    <div class="button-container">
                         <button>1</button>
                     </div>
-                    <div class="calculator-digits">
+                    <div class="button-container">
                         <button>1</button>
                     </div>
-                    <div class="calculator-digits">
+                    <div class="button-container">
                         <button>1</button>
                     </div>
-                    <div class="calculator-digits">
+                    <div class="button-container">
                         <button>1</button>
                     </div>
-                    <div class="calculator-digits">
+                    <div class="button-container">
                         <button>1</button>
                     </div>
-                    <div class="calculator-digits">
+                    <div class="button-container">
                         <button>1</button>
                     </div>
-                    <div class="calculator-digits">
+                    <div class="button-container">
                         <button>1</button>
                     </div>
-                    <div class="calculator-digits">
+                    <div class="button-container">
                         <button>1</button>
                     </div>
-                    <div class="calculator-digits">
+                    <div class="button-container">
                         <button>1</button>
                     </div>
     
-                    <div class="calculator-digits">
+                    <div class="button-container">
                         <button>1</button>
                     </div>
-                    <div class="calculator-digits">
+                    <div class="button-container">
                         <button>1</button>
                     </div>
-                    <div class="calculator-digits">
+                    <div class="button-container">
                         <button>1</button>
                     </div>
-                    <div class="calculator-digits">
+                    <div class="button-container">
                         <button>1</button>
                     </div>
-                    <div class="calculator-digits">
+                    <div class="button-container">
                         <button>1</button>
                     </div>
-                    <div class="calculator-digits">
+                    <div class="button-container">
                         <button>1</button>
                     </div>
-                    <div class="calculator-digits">
+                    <div class="button-container">
                         <button>1</button>
                     </div>
-                    <div class="calculator-digits">
+                    <div class="button-container">
                         <button>1</button>
                     </div>
-                    <div class="calculator-digits">
+                    <div class="button-container">
                         <button>1</button>
                     </div>
-                    <div class="calculator-digits">
+                    <div class="button-container">
                         <button>1</button>
                     </div>
-                    <div class="calculator-digits">
+                    <div class="button-container">
                         <button>1</button>
                     </div>
-                    <div class="calculator-digits">
+                    <div class="button-container">
                         <button>1</button>
                     </div>
-                    <div class="calculator-digits">
+                    <div class="button-container">
                         <button>1</button>
                     </div>
-                    <div class="calculator-digits">
+                    <div class="button-container">
                         <button>1</button>
                     </div>
-                    <div class="calculator-digits">
+                    <div class="button-container">
                         <button>1</button>
                     </div>
-                    <div class="calculator-digits">
+                    <div class="button-container">
                         <button>1</button>
                     </div>
             </div>
