Update calculator buttons with symbols and special characters for enhanced functionality

--- a/index.html
+++ b/index.html
@@ -15,76 +15,76 @@
             </div>
             <div class="calculator-digits-container">
                     <div class="button-container">
-                        <button>1</button>
+                        <button>C</button>
+                    </div>
+                    <div class="button-container">
+                        <button>&#40;</button>
+                    </div>
+                    <div class="button-container">
+                        <button>&#41;</button>
+                    </div>
+                    <div class="button-container">
+                        <button>mod</button>
+                    </div>
+                    <div class="button-container">
+                        <button>&Pi;</button>
+                    </div>
+                    <div class="button-container">
+                        <button>7</button>
+                    </div>
+                    <div class="button-container">
+                        <button>8</button>
+                    </div>
+                    <div class="button-container">
+                        <button>9</button>
+                    </div>
+                    <div class="button-container">
+                        <button>&#247;</button>
+                    </div>
+                    <div class="button-container">
+                        <button>&#8730;</button>
+                    </div>
+                    <div class="button-container">
+                        <button>4</button>
+                    </div>
+                    <div class="button-container">
+                        <button>5</button>
+                    </div>
+                    <div class="button-container">
+                        <button>6</button>
+                    </div>
+                    <div class="button-container">
+                        <button>&#215;</button>
+                    </div>
+                    <div class="button-container">
+                        <button>&#8730;</button>
                     </div>
                     <div class="button-container">
                         <button>1</button>
                     </div>
                     <div class="button-container">
-                        <button>1</button>
+                        <button>2</button>
                     </div>
                     <div class="button-container">
-                        <button>1</button>
+                        <button>3</button>
                     </div>
                     <div class="button-container">
-                        <button>1</button>
+                        <button>&#x0320;</button>
                     </div>
                     <div class="button-container">
-                        <button>1</button>
+                        <button>=</button>
                     </div>
                     <div class="button-container">
-                        <button>1</button>
+                        <button>0</button>
                     </div>
                     <div class="button-container">
-                        <button>1</button>
+                        <button>.</button>
                     </div>
                     <div class="button-container">
-                        <button>1</button>
+                        <button>%</button>
                     </div>
                     <div class="button-container">
-                        <button>1</button>
-                    </div>
-                    <div class="button-container">
-                        <button>1</button>
-                    </div>
-                    <div class="button-container">
-                        <button>1</button>
-                    </div>
-                    <div class="button-container">
-                        <button>1</button>
-                    </div>
-                    <div class="button-container">
-                        <button>1</button>
-                    </div>
-                    <div class="button-container">
-                        <button>1</button>
-                    </div>
-                    <div class="button-container">
-                        <button>1</button>
-                    </div>
-                    <div class="button-container">
-                        <button>1</button>
-                    </div>
-                    <div class="button-container">
-                        <button>1</button>
-                    </div>
-                    <div class="button-container">
-                        <button>1</button>
-                    </div>
-                    <div class="button-container">
-                        <button>1</button>
-                    </div>
-                    <div class="button-container">
-                        <button>1</button>
-                    </div>
-                    <div class="button-container">
-                        <button>1</button>
-                    </div>
-                    <div class="button-container">
-                        <button>1</button>
-                    </div>
-                    <div class="button-container">
-                        <button>1</button>
+                        <button>+</button>
                     </div>
             </div>
         </div>
