--- a/index.html
+++ b/index.html
@@ -11,7 +11,10 @@
     <div class="container">
         <div class="calculator">
             <div class="calculator-display">
-                <p>Hello World</p>
+                <div class="calculator-display-history"></div>
+                <div class="calculator-display-current">
+                    <input id="calculator-display-current-input" type="text">
+                </div>
             </div>
             <div class="calculator-digits-container">
                     <div class="button-container">
@@ -57,7 +60,7 @@
                         <button>&#215;</button>
                     </div>
                     <div class="button-container">
-                        <button>&#8730;</button>
+                        <button>&#8337;</button>
                     </div>
                     <div class="button-container">
                         <button>1</button>
@@ -69,7 +72,7 @@
                         <button>3</button>
                     </div>
                     <div class="button-container">
-                        <button>&#x0320;</button>
+                        <button>-</button>
                     </div>
                     <div class="button-container">
                         <button>=</button>
@@ -78,7 +81,7 @@
                         <button>0</button>
                     </div>
                     <div class="button-container">
-                        <button>.</button>
+                        <button>&#8231;</button>
                     </div>
                     <div class="button-container">
                         <button>%</button>
