Add id for buttons

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <div class="calculator-display">
                 <div class="calculator-display-history"></div>
                 <div class="calculator-display-current">
-                    <input id="calculator-display-current-input" type="text">
+                    <input id="calculator-display-current-input" type="text" value="24+24">
                 </div>
             </div>
             <div class="calculator-digits-container">
@@ -72,10 +72,10 @@
                         <button>3</button>
                     </div>
                     <div class="button-container">
-                        <button>-</button>
+                        <button id="subtractionbutton">-</button>
                     </div>
                     <div class="button-container">
-                        <button>=</button>
+                        <button id="equalButton">=</button>
                     </div>
                     <div class="button-container">
                         <button>0</button>
@@ -87,7 +87,7 @@
                         <button>%</button>
                     </div>
                     <div class="button-container">
-                        <button>+</button>
+                        <button id="additionButton">+</button>
                     </div>
             </div>
         </div>
