add class button on the digits buttons

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             </div>
             <div class="calculator-digits-container">
                     <div class="button-container">
-                        <button>C</button>
+                        <button id="clearButton">C</button>
                     </div>
                     <div class="button-container">
                         <button>&#40;</button>
@@ -33,13 +33,13 @@
                         <button>&Pi;</button>
                     </div>
                     <div class="button-container">
-                        <button>7</button>
+                        <button class="number">7</button>
                     </div>
                     <div class="button-container">
-                        <button>8</button>
+                        <button class="number">8</button>
                     </div>
                     <div class="button-container">
-                        <button>9</button>
+                        <button class="number">9</button>
                     </div>
                     <div class="button-container">
                         <button>&#247;</button>
@@ -48,13 +48,13 @@
                         <button>&#8730;</button>
                     </div>
                     <div class="button-container">
-                        <button>4</button>
+                        <button class="number">4</button>
                     </div>
                     <div class="button-container">
-                        <button>5</button>
+                        <button class="number">5</button>
                     </div>
                     <div class="button-container">
-                        <button>6</button>
+                        <button class="number">6</button>
                     </div>
                     <div class="button-container">
                         <button>&#215;</button>
@@ -63,13 +63,13 @@
                         <button>&#8337;</button>
                     </div>
                     <div class="button-container">
-                        <button>1</button>
+                        <button class="number">1</button>
                     </div>
                     <div class="button-container">
-                        <button>2</button>
+                        <button class="number">2</button>
                     </div>
                     <div class="button-container">
-                        <button>3</button>
+                        <button class="number">3</button>
                     </div>
                     <div class="button-container">
                         <button id="subtractionbutton">-</button>
@@ -78,7 +78,7 @@
                         <button id="equalButton">=</button>
                     </div>
                     <div class="button-container">
-                        <button>0</button>
+                        <button class="number">0</button>
                     </div>
                     <div class="button-container">
                         <button>&#8231;</button>
