--- a/index.html
+++ b/index.html
@@ -11,10 +11,7 @@
     <div class="container">
         <div class="calculator">
             <div class="calculator-display">
-                <div class="calculator-display-history"></div>
-                <div class="calculator-display-current">
-                    <input id="calculator-display-current-input" type="text" value="24+24">
-                </div>
+                <div class="calculator-display-history">
             </div>
             <div class="calculator-digits-container">
                     <div class="button-container">
@@ -33,61 +30,61 @@
                         <button>&Pi;</button>
                     </div>
                     <div class="button-container">
-                        <button class="number">7</button>
+                        <button class="number" value="7">7</button>
                     </div>
                     <div class="button-container">
-                        <button class="number">8</button>
+                        <button class="number" value="8">8</button>
                     </div>
                     <div class="button-container">
-                        <button class="number">9</button>
+                        <button class="number" value="9">9</button>
                     </div>
                     <div class="button-container">
-                        <button>&#247;</button>
+                        <button class="operatorButton" value="/">/</button>
                     </div>
                     <div class="button-container">
                         <button>&#8730;</button>
                     </div>
                     <div class="button-container">
-                        <button class="number">4</button>
+                        <button id="test" class="number" value="4">4</button>
                     </div>
                     <div class="button-container">
-                        <button class="number">5</button>
+                        <button class="number" value="5">5</button>
                     </div>
                     <div class="button-container">
-                        <button class="number">6</button>
+                        <button class="number" value="6">6</button>
                     </div>
                     <div class="button-container">
-                        <button>&#215;</button>
+                        <button class="operatorButton" value="*">*</button>
                     </div>
                     <div class="button-container">
                         <button>&#8337;</button>
                     </div>
                     <div class="button-container">
-                        <button class="number">1</button>
+                        <button class="number" value="1">1</button>
                     </div>
                     <div class="button-container">
-                        <button class="number">2</button>
+                        <button class="number" value="2">2</button>
                     </div>
                     <div class="button-container">
-                        <button class="number">3</button>
+                        <button class="number" value="3">3</button>
                     </div>
                     <div class="button-container">
-                        <button id="subtractionbutton">-</button>
+                        <button class="operatorButton" value="-">-</button>
                     </div>
                     <div class="button-container">
                         <button id="equalButton">=</button>
                     </div>
                     <div class="button-container">
-                        <button class="number">0</button>
+                        <button class="number" value="0">0</button>
                     </div>
                     <div class="button-container">
                         <button>&#8231;</button>
                     </div>
                     <div class="button-container">
-                        <button>%</button>
+                        <button >%</button>
                     </div>
                     <div class="button-container">
-                        <button id="additionButton">+</button>
+                        <button class="operatorButton" value="+">+</button>
                     </div>
             </div>
         </div>
